--- a/ssia-ch2-ex1/src/main/resources/application.properties
+++ b/ssia-ch2-ex1/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ssia-ch2-ex1
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=certificate.p12
+server.ssl.key-store-password=12345
