2장 :: UserDetailsService 구성 요소, 엔드포인트 권한 부여 구성 재정의

--- a/ssia-ch2-ex1/src/main/resources/application.properties
+++ b/ssia-ch2-ex1/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ssia-ch2-ex1
 
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=certificate.p12
-server.ssl.key-store-password=12345
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=certificate.p12
+#server.ssl.key-store-password=12345
